tests/snapshots/snapshots__pipeline@pattern_no_catchall.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/pattern_no_catchall.pr
---
== tokens ==
VOpen Type UIdent("Point") Eq UIdent("Point") LBrace Ident("x") Colon KwInt Comma Ident("y") Colon KwInt RBrace VSemi Pattern UIdent("Diag") LParen Ident("n") RParen For UIdent("Point") Eq VOpen Ident("view") Lambda LParen Ident("p") RParen Arrow If Ident("p") Dot Ident("x") EqEq Ident("p") Dot Ident("y") Then UIdent("Some") LParen Ident("p") Dot Ident("x") RParen Else UIdent("None") VClose VSemi Fn Ident("f") LParen Ident("p") Colon UIdent("Point") RParen Colon KwInt Eq VOpen Match Ident("p") Of VOpen UIdent("Diag") LParen Ident("n") RParen FatArrow Ident("n") VClose VClose VSemi Fn Ident("main") LParen RParen Colon KwUnit Eq Ident("println") LParen Ident("f") LParen UIdent("Point") LBrace Ident("x") Eq Int(IntLit { value: 1, suffix: None }) Comma Ident("y") Eq Int(IntLit { value: 1, suffix: None }) RBrace RParen RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Point",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Point",
                    args: [
                        Int,
                        Int,
                    ],
                    fields: Some(
                        [
                            (
                                "x",
                                Int,
                            ),
                            (
                                "y",
                                Int,
                            ),
                        ],
                    ),
                    span: 13..18,
                },
            ],
            deriving: [],
            newtype: false,
            span: 0..37,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    patterns: [
        PatternDecl {
            name: "Diag",
            params: [
                "n",
            ],
            for_ty: "Point",
            view: Spanned {
                node: Lam(
                    [
                        Param {
                            name: "p",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                    ],
                    Spanned {
                        node: If(
                            Spanned {
                                node: Bin(
                                    Eq,
                                    Spanned {
                                        node: FieldAccess(
                                            Spanned {
                                                node: Var(
                                                    "p",
                                                ),
                                                span: 85..86,
                                            },
                                            "x",
                                        ),
                                        span: 85..88,
                                    },
                                    Spanned {
                                        node: FieldAccess(
                                            Spanned {
                                                node: Var(
                                                    "p",
                                                ),
                                                span: 92..93,
                                            },
                                            "y",
                                        ),
                                        span: 92..95,
                                    },
                                ),
                                span: 85..95,
                            },
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "Some",
                                        ),
                                        span: 101..105,
                                    },
                                    [
                                        Spanned {
                                            node: FieldAccess(
                                                Spanned {
                                                    node: Var(
                                                        "p",
                                                    ),
                                                    span: 106..107,
                                                },
                                                "x",
                                            ),
                                            span: 106..109,
                                        },
                                    ],
                                ),
                                span: 101..110,
                            },
                            Spanned {
                                node: Var(
                                    "None",
                                ),
                                span: 116..120,
                            },
                        ),
                        span: 82..120,
                    },
                ),
                span: 74..120,
            },
            make: None,
            span: 39..120,
        },
    ],
    fns: [
        Decl {
            name: "f",
            params: [
                Param {
                    name: "p",
                    ty: Some(
                        Con(
                            "Point",
                            [],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "p",
                        ),
                        span: 154..155,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Diag",
                                    [
                                        Spanned {
                                            node: Var(
                                                "n",
                                            ),
                                            span: 168..169,
                                        },
                                    ],
                                ),
                                span: 163..170,
                            },
                            body: Spanned {
                                node: Var(
                                    "n",
                                ),
                                span: 174..175,
                            },
                        },
                    ],
                ),
                span: 148..175,
            },
            wheres: [],
            span: 122..175,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 196..203,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "f",
                                    ),
                                    span: 204..205,
                                },
                                [
                                    Spanned {
                                        node: RecordCreate(
                                            "Point",
                                            [
                                                (
                                                    "x",
                                                    Spanned {
                                                        node: Int(
                                                            IntLit {
                                                                value: 1,
                                                                suffix: None,
                                                            },
                                                        ),
                                                        span: 218..219,
                                                    },
                                                ),
                                                (
                                                    "y",
                                                    Spanned {
                                                        node: Int(
                                                            IntLit {
                                                                value: 1,
                                                                suffix: None,
                                                            },
                                                        ),
                                                        span: 225..226,
                                                    },
                                                ),
                                            ],
                                        ),
                                        span: 206..228,
                                    },
                                ],
                            ),
                            span: 204..229,
                        },
                    ],
                ),
                span: 196..230,
            },
            wheres: [],
            span: 177..230,
        },
    ],
}

== types ==
[E6040] Type Error: match through view pattern `Diag` is never exhaustive: add a catchall arm
   ╭─[ <source>:8:5 ]
   │
 8 │     Diag(n) => n
   │     ───┬───  
   │        ╰───── match through view pattern `Diag` is never exhaustive: add a catchall arm
───╯
