tests/snapshots/snapshots__pipeline@poly.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/poly.pr
---
== tokens ==
VOpen Fn Ident("twice") LParen Ident("f") Comma Ident("x") RParen Eq Ident("f") LParen Ident("f") LParen Ident("x") RParen RParen VSemi Fn Ident("inc") LParen Ident("x") RParen Eq Ident("x") Plus Int(IntLit { value: 1, suffix: None }) VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("twice") LParen Ident("inc") Comma Int(IntLit { value: 0, suffix: None }) RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "twice",
            params: [
                Param {
                    name: "f",
                    ty: None,
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "x",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "f",
                        ),
                        span: 17..18,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "f",
                                    ),
                                    span: 19..20,
                                },
                                [
                                    Spanned {
                                        node: Var(
                                            "x",
                                        ),
                                        span: 21..22,
                                    },
                                ],
                            ),
                            span: 19..23,
                        },
                    ],
                ),
                span: 17..24,
            },
            wheres: [],
            span: 0..24,
        },
        Decl {
            name: "inc",
            params: [
                Param {
                    name: "x",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Bin(
                    Add,
                    Spanned {
                        node: Var(
                            "x",
                        ),
                        span: 38..39,
                    },
                    Spanned {
                        node: Int(
                            IntLit {
                                value: 1,
                                suffix: None,
                            },
                        ),
                        span: 42..43,
                    },
                ),
                span: 38..43,
            },
            wheres: [],
            span: 26..43,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 57..64,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "twice",
                                    ),
                                    span: 65..70,
                                },
                                [
                                    Spanned {
                                        node: Var(
                                            "inc",
                                        ),
                                        span: 71..74,
                                    },
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 0,
                                                suffix: None,
                                            },
                                        ),
                                        span: 76..77,
                                    },
                                ],
                            ),
                            span: 65..78,
                        },
                    ],
                ),
                span: 57..79,
            },
            wheres: [],
            span: 45..79,
        },
    ],
}

== types ==
twice : forall e0 a. ((a) -> a ! {e0}, a) -> a ! {e0}
inc : (Int) -> Int
main : () -> Unit ! {IO}

== core (cbpv) ==
fn twice(f, x) =
  return x to t@0
  return f to t@1
  (force t@1)(t@0) to t@2
  return f to t@3
  (force t@3)(t@2)
fn inc(x) =
  return x to t@4
  return 1 to t@5
  t@4 + t@5
fn main() =
  return thunk { \_p0. inc(_p0) } to t@6
  return 0 to t@7
  twice(t@6, t@7) to t@8
  print t@8 to t@9
  print_nl

== fbip (rc) ==
fn twice(f, x) =
  dup f
  return x to t@0
  return f to t@1
  (force t@1)(t@0) to t@2
  return f to t@3
  (force t@3)(t@2)
fn inc(x) =
  return x to t@4
  return 1 to t@5
  t@4 + t@5
fn main() =
  return thunk { \_p0. inc(_p0) } to t@6
  return 0 to t@7
  twice(t@6, t@7) to t@8
  print t@8 to t@9
  drop t@9
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [891 x i8] c"scheme  prism-core-hash-v2\0Abundle  1389054d4216caa91001c30e0d96d393d55f64922f28c23bf30b992c87c33be3\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:1389054d4216caa91001c30e0d96d393d55f64922f28c23bf30b992c87c33be3\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_inc  36f40b821a0c1580edfd3cc04acb6604c346c442639063ccde1e8f6aa70bcf7a  inc\0Afn      prismfn_main  42e1e9fb13c9f2e6b469437ce16198a5f7f5ae0609235ba5dcaab193dba4420a  main\0Afn      prismfn_twice  0fba23e5aaf3c0ba23d96bdd468dd8a2a51bfa67a8dc6fb933f667f223af10dc  twice\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [1043 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  1389054d4216caa91001c30e0d96d393d55f64922f28c23bf30b992c87c33be3\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:1389054d4216caa91001c30e0d96d393d55f64922f28c23bf30b992c87c33be3\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_inc 36f40b821a0c1580edfd3cc04acb6604c346c442639063ccde1e8f6aa70bcf7a inc arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_main 42e1e9fb13c9f2e6b469437ce16198a5f7f5ae0609235ba5dcaab193dba4420a main arity 0 slots abi-word[]\0Astate prismfn_twice 0fba23e5aaf3c0ba23d96bdd468dd8a2a51bfa67a8dc6fb933f667f223af10dc twice arity 2 slots abi-word[arg0=%a0:word,arg1=%a1:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol1 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash1 = private constant [65 x i8] c"42e1e9fb13c9f2e6b469437ce16198a5f7f5ae0609235ba5dcaab193dba4420a\00"
@.kont_name1 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol1, ptr @.kont_hash1, ptr @.kont_name1 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call ptr @prism_alloc(i64 0)
  %t2 = getelementptr inbounds i8, ptr %t1, i64 8
  store i64 4180332117194187166, ptr %t2, align 8
  %t4 = ptrtoint ptr %t1 to i64
  call void @prism_rc_inc(i64 %t4)
  %t7 = call i64 @prismap_1(i64 %t4, i64 1)
  call void @prism_rc_dec(i64 %t4)
  %t8 = call i64 @prismap_1(i64 %t4, i64 %t7)
  call void @prism_rc_dec(i64 %t4)
  call void @prism_print_int(i64 %t8)
  call void @prism_rc_dec(i64 %t8)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare ptr @prism_alloc(i64) #0

; Function Attrs: nounwind
declare void @prism_rc_inc(i64) #0

; Function Attrs: nounwind
define i64 @prismap_1(i64 %_clos, i64 %_a0) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_r4180332117194187166 = call i64 @prismlam_4180332117194187166(i64 %_a0)
  br label %_merge

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ]
  ret i64 %_result
}

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

; Function Attrs: nounwind
define i64 @prismlam_4180332117194187166(i64 %_p0) #0 {
entry:
  %t1 = and i64 %_p0, 3
  %t3 = and i64 %t1, 1
  %t4 = icmp eq i64 %t3, 1
  br i1 %t4, label %b0, label %b1

b0:                                               ; preds = %entry
  %t6 = ashr i64 %_p0, 1
  %t9 = add i64 %t6, 1
  %t11 = shl i64 %t9, 1
  %t12 = ashr i64 %t11, 1
  %t13 = icmp eq i64 %t12, %t9
  br i1 %t13, label %b3, label %b1

b1:                                               ; preds = %b0, %entry
  %t15 = call i64 @prism_rt_int_add(i64 %_p0, i64 3)
  br label %b2

b3:                                               ; preds = %b0
  %t14 = or i64 %t11, 1
  br label %b2

b2:                                               ; preds = %b1, %b3
  %t16 = phi i64 [ %t14, %b3 ], [ %t15, %b1 ]
  call void @prism_rc_dec(i64 %_p0)
  call void @prism_rc_dec(i64 3)
  ret i64 %t16
}

; Function Attrs: nounwind
declare i64 @prism_rt_int_add(i64, i64) #0

; Function Attrs: nounwind
declare void @prism_apply_error() #0

attributes #0 = { nounwind }

== run ==
output: [2]
result: ()
