tests/snapshots/snapshots__pipeline@probe.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/probe.pr
---
== tokens ==
VOpen Fn Ident("main") LParen RParen Eq Probe StringLit("trace") Do Ident("println") LParen Int(IntLit { value: 1, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Sugar(
                    Probe(
                        "trace",
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "println",
                                    ),
                                    span: 254..261,
                                },
                                [
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 1,
                                                suffix: None,
                                            },
                                        ),
                                        span: 262..263,
                                    },
                                ],
                            ),
                            span: 254..264,
                        },
                    ),
                ),
                span: 237..264,
            },
            wheres: [],
            span: 225..264,
        },
    ],
}

== types ==
main : () -> Unit ! {IO}

== core (cbpv) ==
fn main() =
  return "trace" to t@0
  probe_enabled(t@0) to t@3
  if t@3 then
    return 1 to t@1
    print t@1 to t@2
    print_nl
  else
    return ()

== fbip (rc) ==
fn main() =
  return "trace" to t@0
  probe_enabled(t@0) to t@3
  if t@3 then
    drop t@3
    return 1 to t@1
    print t@1 to t@2
    drop t@2
    print_nl
  else
    drop t@3
    return ()

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@.str0 = private constant { i64, i64, i64, [6 x i8] } { i64 1152921504606846976, i64 1398034944, i64 5, [6 x i8] c"trace\00" }, align 8
@prism_native_kont_table = constant [705 x i8] c"scheme  prism-core-hash-v2\0Abundle  fda90147ead1b49843c415bf6190b7d71cadce1feb867970fa3f95c3facd56f6\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:fda90147ead1b49843c415bf6190b7d71cadce1feb867970fa3f95c3facd56f6\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  32263e0010182d612411f5e5dfbe9c7251570e2a61e3d59f0e617161bddee416  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [775 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  fda90147ead1b49843c415bf6190b7d71cadce1feb867970fa3f95c3facd56f6\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:fda90147ead1b49843c415bf6190b7d71cadce1feb867970fa3f95c3facd56f6\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main 32263e0010182d612411f5e5dfbe9c7251570e2a61e3d59f0e617161bddee416 main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"32263e0010182d612411f5e5dfbe9c7251570e2a61e3d59f0e617161bddee416\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call i64 @prism_probe_enabled(i64 ptrtoint (ptr @.str0 to i64))
  %t3 = shl i64 %t1, 1
  %t4 = or i64 %t3, 1
  call void @prism_rc_dec(i64 ptrtoint (ptr @.str0 to i64))
  %t6 = icmp ne i64 %t4, 1
  br i1 %t6, label %b0, label %b1

b0:                                               ; preds = %entry
  call void @prism_rc_dec(i64 %t4)
  call void @prism_print_int(i64 3)
  call void @prism_rc_dec(i64 3)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0

b1:                                               ; preds = %entry
  call void @prism_rc_dec(i64 %t4)
  ret i64 0
}

; Function Attrs: nounwind
declare i64 @prism_probe_enabled(i64) #0

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

attributes #0 = { nounwind }

== run ==
output: []
result: ()
